<resources>
    <string name="app_name">SancusNetworks SO SFA Dev</string>
    <string name="SalesPersonName">Store Owner Name :</string>
    <string name="SalesPersonContact">Store Owner Contact :</string>
    <string name="SalesPersonAddress">Sales Person Address :</string>
    <string name="StoreCatType">Store Category Type :</string>
    <string name="NoRouteAvailable">No routes available for your device.</string>
    <string name="genTermFetchingTime">Fetching Current Time..</string>
    <string name="coverage_area">Select Coverage Area</string>
    <string name="dsrcoverage_area">Select DSR Coverage Area </string>
    <string name="DSR_Wise_Report">DSR Wise Report</string>
    <string name="today_working">Today Working</string>
    <string name="today_Notworking">Not Working</string>
    <string name="select_attendance_scope">View Attendance Report</string>
    <string name="select_attendance_report">DSR Attendance Report</string>
    <string name="working">Working</string>
    <string name="not_working">Not Working</string>
    <string name="DayStartButtonText">Day Start</string>
    <string name="ExitButtonText">Exit</string>
    <string name="submittingDayStart">Submitting Day Start Details...</string>
    <string name="selectAtleastOneOption">Please Select atleast one option to proceed.</string>
    <string name="selectAtleastOneOptionwithedittext">Please Specify the reason first, to proceed.</string>
    <string name="specifyDBRName">Please Specify Distributor Name, to proceed.</string>
    <string name="specifyLocatione">Please Specify Other Location, to proceed.</string>
    <string name="ManageDSRMsg">Manage DSR &amp; IMEI</string>
    <string name="AlertDialogHeaderMsg">Alert</string>
    <string name="AlertDialogHeaderErrorMsg">Error</string>
    <string name="AlertDialogOkButton">OK</string>
    <string name="AlertDialogCancelButton">Cancel</string>
    <string name="AlertDialogYesButton">Yes</string>
    <string name="AlertDialogNoButton">No</string>
    <string name="genTermInformation">Information</string>
    <string name="genTermNoDataConnectionFullMsg">Your device has no Data Connection. \n Please ensure Internet is accessible to Continue.</string>
    <string name="BackButConfirm">Have you saved your data before going back?</string>
    <string name="distributorSubmitMessage">Do you want to submit distributors information</string>
    <string name="LocalAreaMessage">Address</string>
    <string name="PinCodeMessage">Pin Code</string>
    <string name="CityMessage">City</string>
    <string name="StateMessage">State</string>
    <string name="PleaseSelectDistributor">Please Select Distributor.</string>
    <string name="PleaseFillAddress">Please Fill Address Value.</string>
    <string name="PleaseFillProperAddress">Please fill Proper address.</string>
    <string name="PleaseFillPincode">Please Fill Pincode Value.</string>
    <string name="PleaseFillPincodeAllDigits">Pin Code value cannot be less than 6 digits.</string>
    <string name="PleaseFillCity">Please Fill City Value.</string>
    <string name="PleaseFillState">Please Fill State Value.</string>
    <string name="DayEndBeforeLogout">Please Day End Before Logging Out.</string>
    <string name="genTermNoDataConnection">Information</string>
    <string name="internetError">Internet connection is slow ,please try again.</string>
    <string name="phnRegisterError">This phone is not registered, please contact administrator.</string>
    <string name="phnDateError">Your Phone Date is not correct.Please Correct it.</string>
    <string name="regID">Create Registration ID.</string>
    <string name="errorTxt">Error :</string>
    <string name="errorPlayServices">This device does not support Play services, App will not work normally</string>
    <string name="NewVersionMsg">New Version of this application is available now. \nPlease click on OK to install new Version!</string>
    <string name="UpdatingNewVersionMsg">Updating New Version…</string>
    <string name="routeNoAvail">Routes are not Available for this Phone</string>
    <string name="errorFetchData">Unable to fetch  data, please try again.</string>
    <string name="genTermPleaseWaitNew">Please Wait ...</string>
    <string name="genTermLoadData">Loading Data...</string>
    <string name="txtWelcome">Welcome</string>
    <string name="Coverage_Area">Coverage Area</string>
    <string name="Contact_No">Contact No</string>
    <string name="DOB">DOB</string>
    <string name="txtDayStart">Day Start</string>
    <string name="radioYes">Yes</string>
    <string name="radioNo">No</string>
    <string name="txtUpdate">Update Now</string>
    <string name="txtNotYou">Not You</string>
    <string name="hintMobileNo">Mobile No.</string>
    <string name="txtValidate">Validate</string>
    <string name="txtFName">First Name</string>
    <string name="txtStoreNotVisible">If store is not showing in list? Please click on Find Nearby Stores button. </string>
    <string name="txtLName">Last Name</string>
    <string name="txtContactNo">Contact No.</string>
    <string name="txtDOB">DOB</string>
    <string name="txtSelectDate">Select Date</string>
    <string name="txtSex">Sex</string>
    <string name="txtMale">Male</string>
    <string name="txtFemale">Female</string>
    <string name="txtMaritalStatus">Marital Status</string>
    <string name="txtMarried">Married</string>
    <string name="txtUnmarried">Unmarried</string>
    <string name="txtMarriedDate">Married Date</string>
    <string name="txtQualification">Qualification</string>
    <string name="txtSelect">Select</string>
    <string name="txtUpdatedphoto">Updated photo</string>
    <string name="txtSelfie">Selfie</string>
    <string name="txtBrowse">Browse</string>
    <string name="txtEmailID">EmailID</string>
    <string name="txtBloodGroup">Blood Group</string>
    <string name="txtSIGNHERE">SIGN HERE</string>
    <string name="txtCancel">Cancel</string>
    <string name="txtclearSign">clear Sign</string>
    <string name="txtsave">save</string>
    <string name="txtProceed">Proceed</string>
    <string name="txtSubmit">Submit</string>
    <string name="txtNoCamera">Sorry, your phone does not have a camera!</string>
    <string name="txtNoFrontCamera">No front facing camera found.</string>
    <string name="txtSuccessfullySaved">Successfully Saved</string>
    <string name="txtSELECTDOB">SELECT DOB</string>
    <string name="txtSelectMarriedDate">Select Married Date</string>
    <string name="txtBloodGroupTitle">Blood-Group</string>
    <string name="txtSubmitData">Do you want to submit data</string>
    <string name="txtErrorNoDataConnection">No Data Connection!</string>
    <string name="txtErrorInternetConnection">Your device has no Data Connection! Please ensure Internet is accessible to Continue.</string>
    <string name="txtErrorMobileNo">Mobile no. is not valid</string>
    <string name="txtSelectDOB">Please select DOB</string>
    <string name="txtValidateFirstName">First Name is empty</string>
    <string name="txtValidateLastName">Last Name is empty</string>
    <string name="txtValidateContactNo">Contact no. is not valid</string>
    <string name="txtValidateSelectSex">Please select Sex</string>
    <string name="txtValidateMaritalStatus">Please select Marital Status</string>
    <string name="txtValidateMarriedDate">Please select Married Date</string>
    <string name="txtValidateQualification">Please select Qualification</string>
    <string name="txtValidateUpdatePhoto">Please Update Photo</string>
    <string name="txtValidateEmailID">EmailID is not valid</string>
    <string name="txtValidateBloodGroup">Please select Blood-Group</string>
    <string name="txtValidateSignature">Please do Signature</string>
    <string name="txtDSRMsg">Please remember to update your personal details today before doing day end activity</string>
    <string name="hintSearchproducts">Search here..</string>
    <string name="txtSwitchCamera">Switch Camera</string>
    <string name="txtCapture">Capture</string>
    <string name="txtSalesPerformanceMaximizer">Sales Performance Maximizer</string>
    <string name="radioTodayRoute">Today Route : </string>
    <string name="radioChooseDifferentRoute">Choose Different Route</string>
    <string name="txtSelectedRoute">Selected Route</string>
    <string name="txtNoRouteAvailable">No Route Available</string>
    <string name="txtGetStores">Get Stores</string>
    <string name="txtNoStoreVisittoday">No Store Visit today</string>
    <string name="txtDistributorStock">Distributor Stock</string>
    <string name="txtUpdateExecution">Update Execution</string>
    <string name="txtErrorPhnDate">Your Phone  Date is not Up to date.Please Correct the Date.</string>
    <string name="AvailableRoutesMsg">Available Routes</string>
    <string name="txtError">Error.....</string>
    <string name="txtErrorRetrievingData">Error while Retrieving Data!\nPlease Retry</string>
    <string name="txtErr">Error</string>
    <string name="txtSelectReason">Please select the reason first.</string>
    <string name="txtEnterReason">Please enter the reason.</string>
    <string name="txtInvoicePending">There is no Invoice Pending</string>
    <string name="txtRetry">Retry</string>
    <string name="txtReason">Reason :</string>
    <string name="NoDataConnectionFullMsg">Your device has no Data Connection. \n Please ensure Internet is accessible to Continue.</string>
    <string name="RetrivingDataMsg">Retrieving Data…</string>
    <string name="SubmittingDataMsg">Submitting Data…</string>
    <string name="ValidatingMsg">Validating User</string>
    <string name="txtIncentive">Incentive</string>
    <string name="txtFetchingReports">Fetching reports</string>
    <string name="txtEarnedpoints">earned points\nRs:100</string>
    <string name="txtIncentiveName">Incentive Name</string>
    <string name="txtSalesTargetValue">Sales Target Value</string>
    <string name="txtSelectStore">Select Store</string>
    <string name="txtReport">Report</string>
    <string name="txtAttndnc">DSR Attendance</string>
    <string name="txtScndryUpdate">Enter Day Results</string>
    <string name="Submit">Submit</string>
    <string name="InvoiceHeader">Invoice Store Selection</string>
    <string name="SelDistrbtr">Select Distributor</string>
    <string name="launcActiSelectRut">Select Route</string>
    <string name="ExecuteOrders">Execute Orders</string>
    <string name="CancelOrders">Cancel Orders</string>
    <string name="SearchStore">Search Store</string>
    <string name="home">Home</string>
    <string name="ChangeLanguage">Change Language</string>
    <string name="Survey">Survey</string>
    <string name="DayEnd">Day End</string>
    <string name="RefreshData">Refresh Data</string>
    <string name="ChangeRoute">Change Route</string>
    <string name="TargetVsAchieved">Target Vs Achieved</string>
    <string name="CheckTodayOrder">Check Today Order</string>
    <string name="PurchaseOrder">Purchase Order</string>
    <string name="spinnerloc">Distributor Names </string>
    <string name="spinnerarea">Route Names </string>
    <string name="MarketVisit">Market Visit</string>
    <string name="Execution">Execution</string>
    <string name="StoreMapping">Store Validation</string>
    <string name="DistributorStock">Distributor Stock</string>
    <string name="DSMTracker">DSR Tracker</string>
    <string name="MapDistributor">Map Distributor</string>
    <string name="refreshCompleteData">Refresh Complete Data</string>
    <string name="AddedStoresSummary">Added Stores Summary</string>
    <string name="ChangeDSR">Change DSR</string>
    <string name="upload_data">Upload Data</string>
    <string name="version_no">Version No.</string>
    <string name="faqs">FAQs</string>
    <string name="contact_us">Contact Us</string>
    <string name="manage_dsr_amp_imei">Manage DSR &amp; IMEI</string>
    <string name="view_new_added_store">View New Added Store</string>
</resources>