<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >
    
      <ImageView
            android:id="@+id/mainImg"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@drawable/banner_rspl"
            android:layout_below="@+id/bardd"
            />
    <Button
        android:id="@+id/butHome"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="@drawable/alert_text_background"
        android:textColor="#000000"
        android:gravity="left|center_vertical"
        android:drawableRight="@drawable/ic_right2"
        android:textSize="14sp"
        android:text="@string/home" />
     <Button
            android:id="@+id/mainImg1"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:background="@drawable/alert_text_background"
            android:textColor="#000000"
         android:gravity="left|center_vertical"
         android:drawableRight="@drawable/ic_right2"
           android:textSize="14sp"
            android:text="@string/DayEnd"
         android:visibility="gone"/>
         
        
        
        <Button android:id="@+id/butn_refresh_data"
          android:layout_width="220dp"
     android:layout_height="wrap_content"
        android:background="@drawable/alert_text_background"
         android:textColor="#000000"
     android:text="@string/RefreshData"
	 android:gravity="left|center_vertical"
         android:drawableRight="@drawable/ic_right2"
           android:textSize="14sp"/>

    <Button android:id="@+id/butn_PurchaseOrder"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="@drawable/alert_text_background"
        android:textColor="#000000"
        android:text="@string/PurchaseOrder"
        android:gravity="left|center_vertical"
        android:drawableRight="@drawable/ic_right2"
        android:textSize="14sp"/>

    <Button android:id="@+id/butn_Change_dsr"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="@drawable/alert_text_background"
        android:textColor="#000000"
        android:text="@string/ChangeDSR"
        android:gravity="left|center_vertical"
        android:drawableRight="@drawable/ic_right2"
        android:textSize="14sp"/>

      <Button
     android:id="@+id/changeRoute"
      android:layout_width="220dp"
     android:layout_height="wrap_content"
       android:background="@drawable/alert_text_background"
         android:textColor="#000000"
        android:gravity="left|center_vertical"
         android:drawableRight="@drawable/ic_right2"
           android:textSize="14sp"
     android:text="@string/ChangeRoute"
          android:visibility="gone"
   
      />

    <Button
        android:id="@+id/btnDSMWiseReport"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="@drawable/alert_text_background"
        android:drawableRight="@drawable/ic_right2"
        android:gravity="left|center_vertical"
        android:text="@string/DSR_Wise_Report"
        android:textColor="#000000"
        android:textSize="14sp" />


    <Button
        android:id="@+id/btnSalesSummary"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="@drawable/alert_text_background"
        android:textColor="#000000"
        android:gravity="left|center_vertical"
        android:drawableRight="@drawable/ic_right2"
        android:textSize="14sp"
        android:text="@string/txtReport" />
    <Button
        android:id="@+id/btnAttndnc"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="@drawable/alert_text_background"
        android:textColor="#000000"
        android:gravity="left|center_vertical"
        android:drawableRight="@drawable/ic_right2"
        android:textSize="14sp"
        android:text="@string/txtAttndnc" />
    <Button
        android:id="@+id/btnScndryUdt"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="@drawable/alert_text_background"
        android:textColor="#000000"
        android:gravity="left|center_vertical"
        android:drawableRight="@drawable/ic_right2"
        android:textSize="14sp"
        android:text="@string/txtScndryUpdate" />

     <Button
        android:id="@+id/btnstoreMapping"
       android:layout_width="220dp"
     android:layout_height="wrap_content"
       android:background="@drawable/alert_text_background"
         android:textColor="#000000"
        android:gravity="left|center_vertical"
         android:drawableRight="@drawable/ic_right2"
           android:textSize="14sp"
        android:text="@string/StoreMapping" />

    <Button
        android:id="@+id/btnExecution"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="@drawable/alert_text_background"
        android:textColor="#000000"
        android:gravity="left|center_vertical"
        android:drawableRight="@drawable/ic_right2"
        android:textSize="14sp"
        android:text="@string/Execution" />
    <Button
        android:id="@+id/btnSurvey"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="@drawable/alert_text_background"
        android:textColor="#000000"
        android:gravity="left|center_vertical"
        android:drawableRight="@drawable/ic_right2"
        android:textSize="14sp"
        android:text="@string/Survey" />

    <Button
        android:id="@+id/btndistrbtrStock"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="@drawable/alert_text_background"
        android:textColor="#000000"
        android:gravity="left|center_vertical"
        android:drawableRight="@drawable/ic_right2"
        android:textSize="14sp"
        android:text="@string/DistributorStock" />

    <Button
        android:id="@+id/btndsrTracker"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="@drawable/alert_text_background"
        android:textColor="#000000"
        android:gravity="left|center_vertical"
        android:drawableRight="@drawable/ic_right2"
        android:textSize="14sp"
        android:text="@string/DSMTracker" />

    <Button
        android:id="@+id/btnMapDistributor"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="@drawable/alert_text_background"
        android:textColor="#000000"
        android:gravity="left|center_vertical"
        android:drawableRight="@drawable/ic_right2"
        android:textSize="14sp"
        android:text="@string/MapDistributor" />

    <Button
        android:id="@+id/btnTargetVsAchieved"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="@drawable/alert_text_background"
        android:textColor="#000000"
        android:gravity="left|center_vertical"
        android:drawableRight="@drawable/ic_right2"
        android:textSize="14sp"
        android:text="@string/TargetVsAchieved" />
     
       <Button
        android:id="@+id/btnewAddedStore"
       android:layout_width="220dp"
     android:layout_height="wrap_content"
       android:background="@drawable/alert_text_background"
         android:textColor="#000000"
        android:gravity="left|center_vertical"
         android:drawableRight="@drawable/ic_right2"
           android:textSize="14sp"
           android:visibility="gone"
        android:text="@string/view_new_added_store" />
    <Button
        android:id="@+id/btnManageDSR"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="@drawable/alert_text_background"
        android:textColor="#000000"
        android:gravity="left|center_vertical"
        android:visibility="gone"
        android:drawableRight="@drawable/ic_right2"
        android:textSize="14sp"
        android:text="@string/manage_dsr_amp_imei" />

       <Button
        android:id="@+id/btnCheckTodayOrder"
       android:layout_width="220dp"
     android:layout_height="wrap_content"
       android:background="@drawable/alert_text_background"
         android:textColor="#000000"
        android:gravity="left|center_vertical"
         android:drawableRight="@drawable/ic_right2"
           android:textSize="14sp"
        android:text="@string/CheckTodayOrder" />
    <Button
        android:id="@+id/btnChangeLanguage"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="@drawable/alert_text_background"
        android:textColor="#000000"
        android:gravity="left|center_vertical"
        android:drawableRight="@drawable/ic_right2"
        android:textSize="14sp"
        android:text="@string/ChangeLanguage" />

    <Button
        android:id="@+id/btnVersion"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="@drawable/alert_text_background"
        android:textColor="#000000"
        android:gravity="left|center_vertical"
        android:drawableRight="@drawable/ic_right2"
        android:textSize="14sp"
        android:text="" />


</LinearLayout>
</ScrollView>